--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 class="animate-title">Happy New Year 2025!</h1>
-        <p id="wisher" class="animate-wisher">Best wishes from , <span id="name">Your Friend</span></p>
+        <p id="wisher" class="animate-wisher">Best wishes to you and your family from, <span id="name">Your Friend</span></p>
         <p class="instruction">Click the button below to enter the name of the wisher:</p>
         <button class="animate-button" onclick="changeName()">Change Name</button>
     </div>
