--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p class="instruction">Click the button below to enter the name of the wisher:</p>
                     <button class="animate-button" onclick="changeName()">Change Name</button>
                 </div>
-                <img src="https://www.hindustantimes.com/ht-img/img/2023/10/23/1600x900/As-the-decades-passed--the-vagaries-of-weather-and_1698060268622.jpg" alt="Big Ben Clock Tower" class="bigben-image">
+                <img src="" alt="Big Ben Clock Tower" class="bigben-image">
             </div>
         </div>
         <div id="fireworks-container" class="hidden">
